fix: login input slightly too long

--- a/styles/login.css
+++ b/styles/login.css
@@ -31,6 +31,7 @@ form input {
 	height: 70%;
 	width: 100%;
 	font-size: 2.5vmin;
+	box-sizing: border-box;
 }
 
 form label {
